# TheBoredGizmos

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
ChillInvaders/: CMakeLists.txt  Main.cpp
LibBored/: CMakeLists.txt
LibBored/include/LibBored/: Config.hpp
StarBowler/: CMakeLists.txt  Main.cpp
StarBowler/include/StarBowler/: Config.hpp  Player.hpp  Sprite.hpp
include/LibBored/: Config.hpp  ECS.hpp  FlatAssociative.hpp  Sprite.hpp
include/StarBowler/: Player.hpp
resource/ChillInvaders/: Spritesheet.ase
resource/LibBored_test/: Sprite-0001.json
resource/StarBowler/: Entities.json  Sprite-0001.ase  Spritesheet.ase  Spritesheet.json
source/StarBowler/: CMakeLists.txt  Main.cpp
test/LibBored/: CMakeLists.txt  Sprite.cpp
